Se hacen cambios para poder aplicar los DTO en las listas