@@ -1,8 +1,9 @@
 package com.proyecto.angular.demo.Service.Clientes;
 
 import java.util.List;
-import java.util.Optional;
-import org.springframework.beans.BeanUtils;
+import java.util.Map;
+import java.util.stream.Collectors;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -29,17 +30,26 @@ public class ClienteServiceImpl implements ClienteService {
 	
     @Override
     public ClienteDTO crearCliente(ClienteDTO clienteDTO){
+
        return clienteMapper.toDTO(clienteRepository.save(clienteMapper.toEntity(clienteDTO)));
     }
 
     @Override
-    public List<ClienteDTO> findLikeNombre(ClienteDTO clienteDTO){
-        List<ClienteEntity> listaClienteEntity = clienteRepository.findLikeNombre("%"+clienteDTO.getNombre()+"%");
-        return listaClienteEntity.stream().map(c-> clienteMapper.toDTO(c)).toList();
+    public List<ClienteDTO>  findLikeNombre(String Nombre)
+    {
+        List<ClienteEntity> listaClienteEntity = clienteRepository.findLikeNombre("%" + Nombre + "%");
+         
+        
+        return listaClienteEntity.stream().map(c -> clienteMapper.toDTO(c)).collect(Collectors.toList()); 
+    }   
+
+    @Override
+    public List<ClienteDTO> traerTodos(){
+
+        List<ClienteEntity> listaClienteEntity = clienteRepository.findAll();
+
+        return listaClienteEntity.stream().map(c -> clienteMapper.toDTO(c)).collect(Collectors.toList());   
+                                
     }
-
-
-    
-
-    
+        
 }
